# screenshotcenter-py

./: .gitignore  LICENSE  README.md  pyproject.toml
screenshotcenter/: __init__.py  client.py  errors.py  types.py
tests/: test_client.py  test_integration.py
